<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center">
	<ImageView android:id="@+id/ImageView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:src="@drawable/big_icon" android:layout_gravity="center"></ImageView>
	<TextView android:text="@string/app_name" android:id="@+id/TextView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_gravity="center" android:gravity="center"
		android:textSize="@dimen/heading"/>
	<TextView android:text="@string/app_desc" android:id="@+id/TextView02"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="@dimen/app_desc_dimen" android:gravity="center"/>
	<ImageView android:id="@+id/ImageView02"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:src="@drawable/icon_strip" android:layout_marginTop="15dip"
		android:layout_gravity="center_horizontal"></ImageView>
	<TextView android:text="@string/copyright" android:id="@+id/TextView03"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="5dip" android:gravity="center"></TextView>
	<TextView android:text="@string/app_version" android:id="@+id/TextView03"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="1dip" android:gravity="center"></TextView>
	

</LinearLayout>
